<resources>
    <string name="app_name">SwitchGo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="usb_devices">USB Devices</string>
    <string name="open_usb">Open USB</string>
    <string name="open_usb_sucess">USB device opened successfully</string>
    <string name="open_usb_fail">USB device failed to open</string>
    <string name="door_test">Door Test</string>
    <string name="open_hid">Open HID</string>
    <string name="mcu_1_version">MCU-1 Version</string>
    <string name="mcu_2_version">MCU-2 Version</string>
    <string name="exit">Exit</string>
    <string name="clear">Clear All Button Status</string>
    <string name="update_mcu_1">Update MCU-1</string>
    <string name="update_mcu_2">Update MCU-2</string>
    <string name="reboot_mcu_1">Reboot MCU-1</string>
    <string name="reboot_mcu_2">Reboot MCU-2</string>
    <string name="patrol">Patrol</string>
    <string name="stop_patrol">Stop Patrol</string>
    <string name="gate_1">Gate 1</string>
    <string name="gate_2">Gate 2</string>
    <string name="gate_3">Gate 3</string>
    <string name="gate_4">Gate 4</string>
    <string name="all_gates">All Gates</string>
    <string name="left_turn">Left Turn</string>
    <string name="right_turn">Right Turn</string>
    <string name="flashing">Flashing</string>
    <string name="breathing">Breathing</string>
    <string name="constant">Constant</string>
    <string name="gradient">Gradient</string>
    <string name="close">Close</string>
    <string name="battery_0">Battery 0</string>
    <string name="battery_25">Battery 25</string>
    <string name="battery_50">Battery 50</string>
    <string name="battery_75">Battery 75</string>
    <string name="battery_100">Battery 100</string>
    <string name="all_switch_status">All Switch Status</string>
    <string name="interior_light">Interior Light</string>
    <string name="mcu_reboot">MCU Reboot</string>
    <string name="clear_door_block">Clear Door Block</string>
    <string name="version_update_1">Update MCU1</string>
    <string name="version_update_2">Update MCU2</string>
    <string name="recovery_mcu1">Recovery MCU1</string>
    <string name="recovery_mcu2">Recovery MCU2</string>
    <string name="space_1">SPACE_1</string>
    <string name="space_2">SPACE_2</string>
    <string name="space_3">SPACE_3</string>
</resources>