<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".SwitchGoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/bt_get_hid_usb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_devices" />

                <Button
                    android:id="@+id/bt_open_usb_hid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_hid"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/bt_hid_get_mcu1_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mcu_1_version" />


                <Button
                    android:id="@+id/bt_hid_get_mcu2_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mcu_2_version" />

                <Button
                    android:id="@+id/bt_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit" />

                <Button
                    android:id="@+id/bt_clear_display"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/bt_hid_update_mcu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_mcu_1" />


                <Button
                    android:id="@+id/bt_hid_update_mcu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_mcu_2" />


                <Button
                    android:id="@+id/bt_hid_reboot_mcu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_mcu_1" />


                <Button
                    android:id="@+id/bt_hid_reboot_mcu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reboot_mcu_2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_switch_gate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate_1" />


                <Button
                    android:id="@+id/bt_switch_gate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate_2" />


                <Button
                    android:id="@+id/bt_switch_gate3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate_3" />


                <Button
                    android:id="@+id/bt_switch_gate4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gate_4" />


                <Button
                    android:id="@+id/bt_all_gates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_gates" />

                <Button
                    android:id="@+id/btn_space1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_1" />
                <Button
                    android:id="@+id/btn_space2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_2" />
                <Button
                    android:id="@+id/btn_space3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/space_3" />

                <Button
                    android:id="@+id/btn_all_door_open_switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="btn_switch_status_open" />

                <Button
                    android:id="@+id/btn_all_door_close_switch_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="btn_switch_status_close" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_switch_left_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left_turn" />


                <Button
                    android:id="@+id/bt_switch_right_turn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right_turn" />


                <Button
                    android:id="@+id/bt_rbg_mode1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flashing" />


                <Button
                    android:id="@+id/bt_rbg_mode2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breathing" />


                <Button
                    android:id="@+id/bt_rbg_mode3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/constant" />


                <Button
                    android:id="@+id/bt_rbg_mode4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gradient" />


                <Button
                    android:id="@+id/bt_rbg_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_set_soc_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_0" />

                <Button
                    android:id="@+id/bt_set_soc_25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_25" />

                <Button
                    android:id="@+id/bt_set_soc_50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_50" />

                <Button
                    android:id="@+id/bt_set_soc_75"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_75" />


                <Button
                    android:id="@+id/bt_set_soc_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_100" />


                <Button
                    android:id="@+id/get_all_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_switch_status" />


                <Button
                    android:id="@+id/get_switch_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interior_light" />

                <Button
                    android:id="@+id/bt_mcu_reboot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/mcu_reboot" />
                <Button
                    android:id="@+id/bt_clear_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_door_block" />

                <LinearLayout
                    android:id="@+id/update_muc_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    >

                    <Button
                        android:id="@+id/bt_version_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/version_update_1" />

                    <Button
                        android:id="@+id/bt_version_update2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:text="@string/version_update_2" />
                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/black"
            android:orientation="horizontal">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black">

                <TextView
                    android:id="@+id/txt_sendPostRequestByForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:textColor="@color/white" />

            </ScrollView>

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/invisible_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>